# yolov8-ts-cpp

./: CMakeLists.txt  main.cpp  main2.cpp
